fix(web-components): update colours and colour tokens to match v3 dark mode Figma file
Update colours and colour tokens to match v3 dark mode Figma file

--- a/packages/web-components/src/components/ic-menu/ic-menu.css
+++ b/packages/web-components/src/components/ic-menu/ic-menu.css
@@ -147,7 +147,10 @@
 }
 
 .option:not(.disabled-option) .option-description {
-  --ic-typography-color: var(--ic-menu-list-option-description-text-color);
+  --ic-typography-color: var(
+    --menu-item-desc-text-color,
+    var(--ic-menu-list-option-description-text-color)
+  );
 }
 
 .option .option-label {
